--- a/first.html
+++ b/first.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <H1> Have fun with HTML </H1>
-    <p> This is a not first <time datetime> d</time> </p>
+    <p> This is a not first  </p>
 </body>
 </html>
